add icons to scratch menu

--- a/frontend/src/components/VerticalMenu.module.scss
+++ b/frontend/src/components/VerticalMenu.module.scss
@@ -87,6 +87,12 @@ a.item {
     }
 }
 
+.itemChildren {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
 .right {
     display: flex;
     align-items: center;
