diff compile changes

--- a/frontend/src/components/Diff/Diff.module.css
+++ b/frontend/src/components/Diff/Diff.module.css
@@ -43,8 +43,8 @@
 
 .header {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    align-items: center;
+    gap: 4px;
 
     height: 3em;
     padding: 0 1em;
