give editable scratch name a hover state

--- a/frontend/src/components/Scratch/ScratchToolbar.module.scss
+++ b/frontend/src/components/Scratch/ScratchToolbar.module.scss
@@ -82,6 +82,11 @@
     &[contenteditable] {
         text-overflow: initial;
     }
+
+    &.editable:hover,
+    &[contenteditable] {
+        background: var(--g250);
+    }
 }
 
 .icons {
