--- a/frontend/src/components/Tabs.module.scss
+++ b/frontend/src/components/Tabs.module.scss
@@ -16,12 +16,14 @@
     white-space: nowrap;
     overflow-x: auto;
 
+    display: flex;
+    align-items: stretch;
+
     .border & {
         border-bottom: 1px solid var(--a100);
     }
 
     .vertical & {
-        display: flex;
         flex-direction: column;
 
         overflow: hidden;
@@ -39,7 +41,6 @@
     padding: 0 12px;
     min-width: 60px;
     min-height: 32px;
-    height: 100%;
 
     font-size: 0.8rem;
     font-weight: 500;
@@ -134,7 +135,7 @@
         height: 100%;
 
         background: var(--a200);
-        border-radius: 4px;
+        border-radius: 6px;
 
         opacity: inherit;
         transition: opacity 0.1s;
