Add settings page (#270)
* nav user menu popup

* add settings page

Fixes #61.

* use real links for menu links

* lint

* allow access to UserMenu when signed out

* mark comment

* rename 'Scratch settings' tab

* add platform logo to compileropts + give tab min width

* lint

* toolbar hamburger

* draggable diff bar

* scratch preferences modal

* prevent long names from breaking ui

* no scrollbar on vertical tabs

* AboutScratch overflow fixes

* update right pane width

* responsiveness

* toggle menus on multiple clicks

* temporarily remove settings link

* better scratch name behaviour on small widths

* remove nav from scratch page

* implement export

* menu style changes

* scratch name cursor:text

* lint

* don't use focus-visible

Unsupported on Safari

* show loading spinner in ButtonItems

* shortcuts

* footer credits icon

* add icons to scratch menu

* compile scratch in SSR

* score in AboutScratch

* give the toolbar its colour back

* diff compile changes

* give editable scratch name a hover state

* improve editor preferences ui

* tricolor toolbar,tabs,panels

* reduce diff header blur

* tweak scratch name bg color

* pass tests

--- a/frontend/src/components/Diff/Diff.module.css
+++ b/frontend/src/components/Diff/Diff.module.css
@@ -14,9 +14,6 @@
 }
 
 .container {
-    display: flex;
-    flex-direction: row;
-
     width: 100%;
     height: 100%;
 
@@ -27,21 +24,16 @@
 }
 
 .column {
-    min-height: fit-content;
-    overflow-x: auto;
+    height: max-content;
+    overflow: initial !important; /* overrides resizer.Section inline style */
 }
 
-/* Don't let the target column get stupidly wide if there are long symbol names */
-.column:first-child {
-    max-width: 40ch;
-}
+.bar {
+    cursor: col-resize;
+    background: var(--a50);
 
-.column:not(:last-child) {
-    border-right: 1px solid var(--a50);
-}
-
-.column:last-child {
-    flex-grow: 1;
+    position: sticky !important; /* overrides resizer.Bar inline style */
+    top: 0;
 }
 
 .row {
@@ -51,8 +43,8 @@
 
 .header {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    align-items: center;
+    gap: 4px;
 
     height: 3em;
     padding: 0 1em;
@@ -65,13 +57,13 @@
     color: var(--g1200);
     border-bottom: 1px solid var(--a50);
 
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(3px);
 
     user-select: none;
     cursor: default;
 }
 
-@supports not (backdrop-filter: blur(10px)) {
+@supports not (backdrop-filter: blur(3px)) {
     .header {
         background: var(--g200);
     }
