--- a/frontend/src/components/Nav/LoginState.module.scss
+++ b/frontend/src/components/Nav/LoginState.module.scss
@@ -2,7 +2,13 @@
 
 .user {
     @extend .item;
-    gap: 6px;
+
+    cursor: pointer;
+
+    gap: 2px;
+
+    font-size: 0.8em;
+    font-weight: 400;
 }
 
 .avatar {
