--- a/frontend/src/components/compiler/CompilerOpts.module.css
+++ b/frontend/src/components/compiler/CompilerOpts.module.css
@@ -1,23 +1,22 @@
 .header {
-    border-top-left-radius: 1em;
-    border-top-right-radius: 1em;
-    padding: 1em;
-    padding-left: 1.5em;
-    padding-right: 1.5em;
+    padding: 1.5em;
+    padding-bottom: 0;
     background: var(--g300);
-    border-bottom: 1px solid var(--g400);
 
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    gap: 1em;
 
     cursor: default;
 }
 
+.header > * {
+    flex-shrink: 0;
+}
+
 .container {
-    border-bottom-left-radius: 1em;
-    border-bottom-right-radius: 1em;
     padding: 1.5em;
     background: var(--g300);
 }
@@ -28,6 +27,15 @@
     background: transparent;
 
     /* border-bottom: 1px solid var(--g400); */
+}
+
+.preset {
+    font-size: 0.8em;
+    color: var(--g1200);
+
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .row {
