--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -52,6 +52,7 @@ body {
     align-items: center;
     height: 100vh;
     overflow-x: hidden;
+    position: relative; // squashes react-laag warning
 }
 
 #layers {
@@ -69,4 +70,20 @@ main {
 
 .routerProgressBar {
     z-index: 999;
+}
+
+// dialog-polyfill
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+// for Safari
+dialog {
+    z-index: 1000;
 }
