Nav frog padding tweak

--- a/frontend/src/components/Nav/Nav.module.scss
+++ b/frontend/src/components/Nav/Nav.module.scss
@@ -39,8 +39,7 @@
     @extend .item;
 
     margin: 0;
-    padding: 0;
-    padding-left: 4px;
+    padding: 0 4px;
 
     svg {
         pointer-events: none;
