frog hover state

--- a/frontend/src/components/Scratch/ScratchToolbar.module.scss
+++ b/frontend/src/components/Scratch/ScratchToolbar.module.scss
@@ -141,6 +141,10 @@ $column_width: 260px;
     padding-left: 4px;
 
     cursor: pointer;
+
+    &:hover {
+        opacity: 0.8;
+    }
 }
 
 .loginState {
