--- a/frontend/src/pages/scratch/new.module.scss
+++ b/frontend/src/pages/scratch/new.module.scss
@@ -11,21 +11,28 @@
 
 .rule {
     border: 0;
-    background: var(--g400);
+    background: var(--g300);
     height: 1px;
 }
 
 .heading {
-    padding: 10px;
+    background: var(--g300);
+    padding: 1em;
     user-select: auto;
+    align-self: stretch;
 
-    > h1 {
+    .headingInner {
+        max-width: 47em;
+        margin: 0 auto;
+    }
+
+    h1 {
         color: var(--g1900);
         font-size: 1.25em;
         font-weight: 500;
     }
 
-    > p {
+    p {
         padding-top: 4px;
         color: var(--g1000);
         font-size: 0.9em;
