--- a/frontend/src/components/Footer.module.scss
+++ b/frontend/src/components/Footer.module.scss
@@ -14,19 +14,23 @@
 
     border-top: 1px solid var(--g300);
     border-bottom: 1px solid var(--g300);
-    background: var(--g200);
+    background: var(--g300);
 }
 
 .links {
     display: flex;
     justify-content: space-evenly;
+
+    @media (max-width: 600px) {
+        flex-direction: column;
+    }
 }
 
 .link {
     display: inline-flex;
     gap: 0.5em;
     align-items: center;
-    padding: 1em;
+    padding: 0.5em;
 
     font-weight: 600;
 
@@ -39,6 +43,6 @@
     text-align: center;
     font-size: 0.7em;
 
-    background: var(--g200);
+    background: var(--g300);
     color: var(--g600);
 }
