--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -1,7 +1,7 @@
 @use "./theme.scss" as theme;
 
-.themeGreen {
-    @include theme.theme(#77b255, #37393e);
+:root {
+    --link: #3db8e9;
 }
 
 .themePlum {
@@ -32,7 +32,7 @@ html {
 }
 
 body {
-    background: var(--g300);
+    background: var(--g200);
     color: var(--a800);
 
     line-height: 1.25;
