use project icon where relevant

--- a/frontend/src/components/Scratch/ScratchToolbar.module.scss
+++ b/frontend/src/components/Scratch/ScratchToolbar.module.scss
@@ -118,6 +118,7 @@ $column_width: 260px;
 
     display: flex;
     flex-direction: row;
+    align-items: center;
 
     height: 100%;
     padding: 4px 0;
