add "This function has been matched" banner

--- a/frontend/src/pages/scratch/[slug].module.scss
+++ b/frontend/src/pages/scratch/[slug].module.scss
@@ -1,6 +1,7 @@
 .container {
     // centre loading spinner
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 
