--- a/frontend/src/components/Scratch/ScratchPreferencesModal.module.scss
+++ b/frontend/src/components/Scratch/ScratchPreferencesModal.module.scss
@@ -4,6 +4,11 @@
     background: var(--g200);
     box-shadow: 0 0.5em 1em -0.125em rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.02);
 
+    @supports (backdrop-filter: blur(8px)) {
+        background:rgba(255, 255, 255, 0.02);
+        backdrop-filter: blur(8px);
+    }
+
     position: absolute;
 
     // Horizontal positioning
@@ -37,6 +42,10 @@
         border-bottom: 0;
         border-radius: 0;
     }
+
+    &:focus {
+        outline: none;
+    }
 }
 
 .overlay {
@@ -45,8 +54,7 @@
 
     z-index: 100;
 
-    background: rgba(0, 0, 0, 0.4);
-    backdrop-filter: blur(20px);
+    background: rgba(0, 0, 0, 0.3);
 }
 
 .container {
@@ -100,11 +108,11 @@
 
     color: var(--g1400);
     border: none;
-    background: var(--g300);
+    background: rgba(255, 255, 255, 0.02);
 
     cursor: pointer;
 
-    border-radius: 6px;
+    border-radius: 999px;
 
     &:hover {
         color: var(--g1900);
