list scratches on user pages

--- a/frontend/src/components/ScratchList.module.scss
+++ b/frontend/src/components/ScratchList.module.scss
@@ -15,6 +15,10 @@
     // These inherited by .item
     border-color: var(--g300);
     border-radius: 4px;
+
+    display: grid;
+    grid-template-columns: repeat(var(--num-columns, 1), 1fr);
+    gap: 0.5em;
 }
 
 .item {
@@ -26,7 +30,7 @@
     overflow: hidden;
 
     padding: 1em;
-    margin: 0.5em 0;
+    margin: 0;
 
     border: 1px solid inherit;
     border-radius: inherit;
@@ -48,6 +52,8 @@
     margin-top: 0.5em;
 
     opacity: 0.7;
+
+    grid-column: span var(--num-columns, 1);
 }
 
 .link {
@@ -80,6 +86,10 @@
         height: 1.2em;
     }
 
+    .owner {
+        color: var(--g900);
+    }
+
     .metadata {
         color: var(--g700);
     }
@@ -87,6 +97,7 @@
 
 .singleLine {
     white-space: nowrap;
+    overflow: hidden;
 
     display: flex;
     align-items: center;
