--- a/frontend/src/pages/new.module.scss
+++ b/frontend/src/pages/new.module.scss
@@ -134,3 +134,18 @@
     padding: 2px 10px;
     color: var(--g800);
 }
+
+.privacyNotice {
+    font-size: 0.9rem;
+    padding-top: 1em;
+
+    color: var(--g1200);
+
+    a {
+        color: var(--link);
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
