--- a/frontend/src/components/Scratch/ScratchPreferencesModal.module.scss
+++ b/frontend/src/components/Scratch/ScratchPreferencesModal.module.scss
@@ -139,3 +139,12 @@
     font-size: 0.9em;
     color: var(--g1500);
 }
+
+.intPreference {
+    display: flex;
+    gap: 0.5em;
+    align-items: center;
+
+    font-size: 0.9em;
+    color: var(--g1500);
+}
