--- a/frontend/src/pages/[project].module.scss
+++ b/frontend/src/pages/[project].module.scss
@@ -11,6 +11,7 @@
 
 .loadingContainer {
     display: flex;
+    padding: 1em 0;
     gap: 1em;
     align-items: center;
     justify-content: center;
@@ -58,6 +59,5 @@
         padding-top: 1em;
         gap: 0.5em;
         align-items: center;
-        //justify-content: flex-end;
     }
 }
