add pull timeago

--- a/frontend/src/pages/[project].module.scss
+++ b/frontend/src/pages/[project].module.scss
@@ -59,5 +59,10 @@
         padding-top: 1em;
         gap: 0.5em;
         align-items: center;
+
+        small {
+            font-size: 0.8em;
+            color: var(--g1000);
+        }
     }
 }
