implement projectfunction population

--- a/frontend/src/components/ProjectFunctionList.module.scss
+++ b/frontend/src/components/ProjectFunctionList.module.scss
@@ -83,6 +83,7 @@
         gap: 0.5em;
     }
 
+    /*
     .complexityBg {
         color: var(--g1000);
         font-weight: 500;
@@ -103,4 +104,5 @@
             z-index: -1;
         }
     }
+    */
 }
