add project to about tab

--- a/frontend/src/components/Scratch/AboutScratch.module.scss
+++ b/frontend/src/components/Scratch/AboutScratch.module.scss
@@ -115,3 +115,13 @@
 .signInPrompt {
     margin-left: 16px;
 }
+
+.projectFunctionLinks {
+    a:last-child {
+        color: var(--g800);
+    }
+
+    a:hover {
+        color: var(--link);
+    }
+}
