--- a/frontend/src/components/Nav/Search.module.scss
+++ b/frontend/src/components/Nav/Search.module.scss
@@ -56,7 +56,7 @@
 .icon,
 .loadingIcon {
     position: absolute;
-    top: calc(50% + 1px);
+    top: 50%;
     left: 10px;
     transform: translateY(-50%);
 
