--- a/frontend/src/pages/[project]/[function].module.scss
+++ b/frontend/src/pages/[project]/[function].module.scss
@@ -49,3 +49,23 @@
 
     cursor: default;
 }
+
+.attempts {
+    > h2 {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+
+        gap: 0.5em;
+        padding: 0 0 0.5em 1em;
+
+        > :first-child {
+            flex-grow: 1;
+        }
+    }
+
+    > ul > li {
+        border-color: var(--g300);
+        border-radius: 4px;
+    }
+}
