display src file

--- a/frontend/src/pages/[project]/[function].module.scss
+++ b/frontend/src/pages/[project]/[function].module.scss
@@ -68,4 +68,10 @@
         border-color: var(--g300);
         border-radius: 4px;
     }
+
+    .noAttempts {
+        padding: 1em;
+        text-align: center;
+        color: var(--g800);
+    }
 }
