--- a/frontend/src/components/TimePeriodInput.module.scss
+++ b/frontend/src/components/TimePeriodInput.module.scss
@@ -1,5 +1,12 @@
 .numberInput {
-    background-color: var(--g400);
-    border: none;
+    border: 0;
+    border-bottom: 1px dotted var(--g900);
     padding: 0.08em;
+
+    &:focus,
+    &:hover {
+        outline: none;
+        border-bottom-style: solid;
+        background: var(--g300);
+    }
 }
