add customizable delay before compile (#353)
Co-authored-by: Alex Bates <hi@imalex.xyz>

--- a/frontend/src/components/Scratch/ScratchPreferencesModal.module.scss
+++ b/frontend/src/components/Scratch/ScratchPreferencesModal.module.scss
@@ -131,11 +131,20 @@
     margin-bottom: 0.5em;
 }
 
-.booleanPreference {
-    display: flex;
-    gap: 0.5em;
-    align-items: center;
+.booleanPreference,
+.intPreference {
+    display: block;
+    padding: 0.5em 0;
 
     font-size: 0.9em;
     color: var(--g1500);
+
+    > input {
+        margin-right: 0.5em;
+    }
+
+    &.disabled {
+        filter: grayscale(100%) opacity(50%);
+    }
 }
+
