--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -22,6 +22,8 @@ html {
     box-sizing: border-box;
     font-size: inherit;
     font-family: inherit;
+    scrollbar-color: inherit;
+    scrollbar-width: inherit;
 }
 
 * {
